exports[`Section should render 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontSize": 18,
          "paddingBottom": 12,
          "paddingTop": 18,
          "textAlign": "left"
        },
        Object {}
      ]
    ]
  }>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididuntut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
</Text>
`;

exports[`Section should support style overrides 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontSize": 18,
          "paddingBottom": 12,
          "paddingTop": 18,
          "textAlign": "left"
        },
        Object {
          "color": "#111"
        }
      ]
    ]
  }>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididuntut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
</Text>
`;
